--- a/.github/workflows/tweet-scheduler.yml
+++ b/.github/workflows/tweet-scheduler.yml
@@ -1,4 +1,4 @@
-name: Twitter Bot Scheduler
+name: Telegram Bot Scheduler
 
 on:
   schedule:
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  tweet:
+  telegram-bot:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,11 +31,8 @@ jobs:
 
       - name: Bot ausführen
         env:
-          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-          API_KEY: ${{ secrets.API_KEY }}
-          API_SECRET: ${{ secrets.API_SECRET }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python bot.py
 
